removed footer reviews styling - was able to fix in elfsight, adjusted home hero buttons to stack a little sooner and fixed centering, added overflow-x: hidden to body to fix when it sometimes adds white space to right

--- a/resources/assets/styles/components/_hero.scss
+++ b/resources/assets/styles/components/_hero.scss
@@ -18,9 +18,10 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-    @media (max-width: 330px) {
+    @media (max-width: 400px) {
       grid-template-columns: repeat(1, 1fr);
       grid-row-gap: 20px;
+      justify-items: center;
     }
 
     grid-template-rows: 1fr;
@@ -37,10 +38,18 @@
 
     &:first-of-type {
       margin-left: auto;
+
+      @media (max-width: 400px) {
+        margin: auto;
+      }
     }
 
     &:last-of-type {
       margin-right: auto;
+
+      @media (max-width: 400px) {
+        margin: auto;
+      }
     }
   }
 
