--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -27,22 +27,6 @@ footer {
     }
 
     .footer-col-2 {
-      #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f {
-        .dnGNnl {
-          background-color: rgba(17, 17, 17, 0.05) !important;
-
-          .bqOpuW,
-          .iLMION {
-            color: rgb(0, 0, 0) !important;
-          }
-
-          .faiASX,
-          .eIMLDL {
-            color: rgba(0, 0, 0, 0.5) !important;
-          }
-        }
-      }
-
       #eapps-google-reviews-f2d68bf8-a518-4e24-8717-56b81fb0282f > div > div > div > a {
         display: none !important;
       }
